--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-REACT_APP_APIKEY = "AIzaSyCaOXVQBInbDeEjRi_Lh9wNMDAUbzr5haI"
-REACT_APP_AUTHDOMAIN = "pokemusic-66466.firebaseapp.com"
-REACT_APP_PROJECTID = "pokemusic-66466"
-REACT_APP_STORAGEBUCKET = "pokemusic-66466.firebasestorage.app"
-REACT_APP_MESSAGINGSENDERID = "314396825718"
-REACT_APP_APPID = "1:314396825718:web:f4eca36557ba42cf8d2757"
+VITE_APP_APIKEY=AIzaSyCaOXVQBInbDeEjRi_Lh9wNMDAUbzr5haI
+VITE_APP_AUTHDOMAIN=pokemusic-66466.firebaseapp.com
+VITE_APP_PROJECTID=pokemusic-66466
+VITE_APP_STORAGEBUCKET=pokemusic-66466.firebasestorage.app
+VITE_APP_MESSAGINGSENDERID=314396825718
+VITE_APP_APPID=1:314396825718:web:f4eca36557ba42cf8d2757
+VITE_SPOTIFY_CLIENT_ID=c064b73182fe4b309592c4d6a2c10f26
+#VITE_SPOTIFY_REDIRECT_URI=https://rocketmusic.onrender.com/callback
+VITE_SPOTIFY_REDIRECT_URI=https://rocketmusicdev.loca.lt/choose-username
+
+
+
