--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "firebase": "^11.7.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -18,8 +19,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tunnel": "lt --port 3000 --subdomain rocketmusicdev",
-    "dev:all": "concurrently \"npm run dev\" \"npm run tunnel\""
+    "tunnel": "lt --port 3000 --subdomain rocketmusicdev"
   },
   "eslintConfig": {
     "extends": [
