--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ VITE_APP_MESSAGINGSENDERID=314396825718
 VITE_APP_APPID=1:314396825718:web:f4eca36557ba42cf8d2757
 VITE_SPOTIFY_CLIENT_ID=c064b73182fe4b309592c4d6a2c10f26
 #VITE_SPOTIFY_REDIRECT_URI=https://rocketmusic.onrender.com/callback
-VITE_SPOTIFY_REDIRECT_URI=https://rocketmusicdev.loca.lt/choose-username
+VITE_SPOTIFY_REDIRECT_URI=https://pokemusic-66466.web.app/choose-username
 
 
 
