--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "components": "^0.1.0",
     "firebase": "^11.7.3",
+    "icons": "^1.0.0",
     "react": "^19.1.0",
+    "react-avatar-group": "^1.0.2",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "styled": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
