--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-on-screen": "^2.1.1",
     "react-router-dom": "^7.6.0",
+    "react-typed": "^2.0.12",
     "styled": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
